# duckdb-extension-radar

./: .gitignore  Makefile  README.md  duckdb_extension_radar.py  pyproject.toml  test_duckdb_extension_radar.py
.devcontainer/: devcontainer.json
.github/workflows/: update-readme.yml
