[tool.poetry]
name = "duckdb-extension-radar"
version = "0.1.0"
description = "Scans DuckDB extensions repos and display it in a nice README"
authors = ["mehd-io <mehdi@mehd.io>"]
readme = "README.md"
packages = [{include = "duckdb_extension_radar"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
tabulate = "^0.9.0"
requests = "^2.28.2"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
